# public/swagger.json
@@ -54,20 +54,21 @@
 						"type": "number",
 						"format": "double"
 					},
-					"game": {
-						"$ref": "#/components/schemas/GameDTO"
-					},
 					"rating": {
 						"type": "number",
 						"format": "double"
 					},
 					"review_text": {
 						"type": "string"
+					},
+					"game": {
+						"$ref": "#/components/schemas/GameDTO"
 					}
 				},
 				"required": [
 					"rating",
-					"review_text"
+					"review_text",
+					"game"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -107,6 +108,36 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateGame",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ReviewDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Reviews"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ReviewDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/reviews/{id}": {
@@ -144,6 +175,46 @@
 						}
 					}
 				]
+			},
+			"patch": {
+				"operationId": "UpdateGame",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ReviewDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Reviews"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ReviewDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/games": {
