# src/controllers/review.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Route, Tags, Get, Path } from "tsoa";
+import { Controller, Route, Tags, Get, Path, Post, Body, Patch } from "tsoa";
 import { ReviewDTO } from "../dto/review.dto";
 import { reviewService } from "../services/review.service";
 import { notFound } from "../error/NotFoundError";
@@ -13,10 +13,25 @@ export class ReviewController extends Controller {
 
    @Get("{id}")
   public async getReviewById(@Path() id: number): Promise<ReviewDTO | null>{
-    const review = await reviewService.getReviewById(id);
-    if(!review){
-      notFound("review");
-    } 
-    return review;
-  } 
+    return reviewService.getReviewById(id);
+  }
+
+  @Post("/")
+  public async createGame(
+    @Body() requestBody: ReviewDTO
+  ): Promise<ReviewDTO> {
+    const { rating, review_text, game } = requestBody;
+    return reviewService.createReview(rating, review_text, game);
+  }
+
+  @Patch("{id}")
+  public async updateGame(
+    @Path() id: number,
+    @Body() requestBody: ReviewDTO
+  ): Promise<ReviewDTO> {
+    const { rating, review_text, game } = requestBody;
+
+    return reviewService.updateReview(id, rating, review_text, game);
+
+  }
 }
