# src/dto/review.dto.ts
@@ -2,7 +2,7 @@ import { GameDTO } from "./game.dto";
 
 export interface ReviewDTO {
     id?: number;
-    game?: GameDTO;
     rating: number;
     review_text: string;
+    game: GameDTO;
 }
